# drytea_family_tree

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  hello.py  main.py  noxfile.py  pyproject.toml  requirements.txt  run_tree.py
.github/workflows/: tests.yml  unit-tests-on-pr.yml  unit-tests-on-push.yml
data/: members.json  relationships.json
gui/: add_member_dialog.py  main_window.py  member_details_frame.py  tree_visualizer.py
scripts/: add_member_dialog.py  family_tree.py  family_tree_base.py  gui_creation.py  tree_visualizer.py
tests/: test_gui.py
utils/: validate.py
