[project]
name = "sims-family-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.20.3",
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
