[dependency-groups]
dev = [
  "commitizen>=4.1.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4"
]

[project]
dependencies = [
  "graphviz>=0.20.3",
  "language-formatters-pre-commit-hooks>=2.14.0",
  "networkx>=3.4.2",
  "nox>=2024.10.9"
]
description = "Add your description here"
name = "sims-family-tree"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
